# vims-code

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yaml  levels.yaml  pyproject.toml  requirements.txt
__data/: all.sql
vims_code/: __main__.py  full_swagger3.yaml  swagger3.yaml
vims_code/admin/: level.py
vims_code/app/: __init__.py  funcs.py  middlewares.py  server.py  system_actions.py
vims_code/auth/: exceptions.py  player_auth.py  team_auth.py
vims_code/call_api/: base.py  consts.py
vims_code/code_loader/: __init__.py
vims_code/db/: schema.py
vims_code/db_adapters/: code_adapter.py  info_adatper.py
vims_code/game/: __init__.py  actions.py  codes.py  game.py  infos.py  levels.py  params.py  scores.py  team.py  team_timer.py
vims_code/models/: _major.py  api.py  base.py  code_condition_list.py  code_list.py  code_param_value_list.py  code_result_value_list.py  code_value_list.py  game_author_list.py  game_list.py  game_team_info.py  game_team_scores.py  info_condition_list.py  info_list.py  level_condition_list.py  level_list.py  level_result_value_list.py  player_auth.py  player_game_2_team.py  player_list.py  team.py  team_game_auth.py  team_game_code_list.py  team_info_list.py  team_level_list.py  team_player_role_list.py  team_timer_event_list.py  tick_list.py  tick_param_value_list.py  tick_step.py  utils.py  variable_list.py
vims_code/ticks/: api.py  timer.py
vims_code/urls/: __init__.py  api.py  auth_calls.py  game_calls.py  info_calls.py
vims_code/utils/: decorators.py  funcs.py  log.py
(+33 files in other folders)
